[workspace]
resolver = "2"
members = ["assets_example"]

[package]
name = "bevy-embasset"
version = "0.1.0-dev"
edition = "2021"
authors = ["Johnny T. Vestergaard <jtv@jrtv.dk>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "assets"]
readme = "README.md"
description = "A Bevy plugin to embed assets in your game, or load assets from other sources!"
repository = "https://github.com/taurr/bevy-embasset"
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
smol_str = "0.1"
derive_more = "0.99"

[features]
use-default-assetio = []
build = []
