[workspace]
resolver = "2"
members = ["assets_example", "assets_manual_example"]

[package]
name = "bevy-embasset"
version = "0.1.2"
authors = ["Johnny T. Vestergaard <jtv@jrtv.dk>"]
edition = "2021"
description = "A Bevy plugin to embed assets in your game, or load assets from other sources!"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "assets", "asset", "gamedev"]
categories = ["game-development", "filesystem"]
repository = "https://github.com/taurr/bevy-embasset"
homepage = "https://github.com/taurr/bevy-embasset"
exclude = [
    ".github"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
bevy = { version = "0.6", default-features = false }
smol_str = "0.1"
derive_more = "0.99"

[features]
use-default-assetio = []
build = []
