[package]
name = "assets_example"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bevy-embasset = { path = "../", features = ["build"] }

[dependencies]
bevy = { version = "0.6", default-features = false }
bevy-embasset = { path = "../" }
