[package]
name = "assets_manual_example"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", default-features = false }
bevy-embasset = { path = "../" }

paste = "1.0"
strum = { version = "0.23", features = ["derive"] }
